[gd_scene load_steps=20 format=3 uid="uid://jlxg0vl58ewg"]

[ext_resource type="Script" path="res://Panda/GiantPanda.gd" id="1_ry2rc"]
[ext_resource type="Texture2D" uid="uid://c6o24n5ttbu6l" path="res://Assets/GiantPanda.png" id="2_w51i5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ohnp8"]
size = Vector2(54, 43)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v214u"]
size = Vector2(36, 32.5)

[sub_resource type="Animation" id="Animation_e2u6q"]
resource_name = "Attack"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_ijfvt"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}

[sub_resource type="Animation" id="Animation_jg53r"]
resource_name = "Walk_Down"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [6, 7, 8, 9]
}

[sub_resource type="Animation" id="Animation_bdww6"]
resource_name = "Walk_Left"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [12, 13, 14, 15]
}

[sub_resource type="Animation" id="Animation_gss23"]
resource_name = "Walk_Right"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [18, 19, 20, 21]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_e6vmm"]
_data = {
"Attack": SubResource("Animation_e2u6q"),
"RESET": SubResource("Animation_ijfvt"),
"Walk_Down": SubResource("Animation_jg53r"),
"Walk_Left": SubResource("Animation_bdww6"),
"Walk_Right": SubResource("Animation_gss23")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_22b7h"]
animation = &"Attack"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_k84pa"]
animation = &"Walk_Right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_8nuh1"]
animation = &"Walk_Left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_hm6k7"]
animation = &"Walk_Down"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_0g7px"]
blend_point_0/node = SubResource("AnimationNodeAnimation_k84pa")
blend_point_0/pos = Vector2(1, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_8nuh1")
blend_point_1/pos = Vector2(-1, 0)
blend_point_2/node = SubResource("AnimationNodeAnimation_hm6k7")
blend_point_2/pos = Vector2(0, 1)
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_npwlj"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ixwx5"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_0fvji"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_hnuuc"]
states/Attack/node = SubResource("AnimationNodeAnimation_22b7h")
states/Attack/position = Vector2(520, 100)
states/Walk/node = SubResource("AnimationNodeBlendSpace2D_0g7px")
states/Walk/position = Vector2(358, 100)
transitions = ["Start", "Walk", SubResource("AnimationNodeStateMachineTransition_npwlj"), "Walk", "Attack", SubResource("AnimationNodeStateMachineTransition_ixwx5"), "Attack", "Walk", SubResource("AnimationNodeStateMachineTransition_0fvji")]

[node name="PandaBody" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 4
motion_mode = 1
script = ExtResource("1_ry2rc")
SPEED = 80
attack = 30

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = 1
scale = Vector2(1.135, 1)
texture = ExtResource("2_w51i5")
hframes = 6
vframes = 4
frame = 5

[node name="Timer" type="Timer" parent="."]

[node name="AttackLabel" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0
metadata/_edit_use_anchors_ = true

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_ohnp8")

[node name="CollisionBody2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 0.75)
shape = SubResource("RectangleShape2D_v214u")

[node name="TimerH" type="Timer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_e6vmm")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_hnuuc")
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/Walk/blend_position = Vector2(-0.8224, 0.10917)

[node name="attack_timer" type="Timer" parent="."]

[node name="Attack_cooldown" type="Timer" parent="."]

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="TimerH" to="." method="_on_timer_h_timeout"]
[connection signal="timeout" from="attack_timer" to="." method="_on_attack_timer_timeout"]
[connection signal="timeout" from="Attack_cooldown" to="." method="_on_attack_cooldown_timeout"]
